# 2025_electron_desctop_webapplication

./: index.js  package-lock.json  package.json  preload.js
css/: style.css
esp32c3_implementation/main/: CMakeLists.txt  main.c  max3010x.c  max3010x.h  udp_client.c  udp_client.h  wifi_handler.c
html/: data.html  index.html
js/main/: csv-main.js  serial-main.js  store-main.js  udp-main.js
js/render/: chart-manager.js  data-renderer.js
linux_udp_script/: udp_sensor.sh
